--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
 h1 {
     display: flex;
     align-items: center;
-    color: rgb(255, 255, 255);
+    color: rgb(255, 0, 0);
     flex: 1;
     margin: 0;
 }
@@ -40,12 +40,12 @@ h1 {
 
 a {
     text-decoration: none;
-    color: #fff;
+    color: #d40b0b;
 }
 
 /* main container area beneath menu */
 main {
-    background: rgb(104, 1, 145);
+    background: rgb(100, 99, 99);
     display: flex;
     margin-top: 20px;
 }
@@ -66,7 +66,7 @@ main {
 
 /* interests section styles */
 #interests {
-    border: 4px rgb(255, 255, 255) ridge;
+    border: 4px rgb(0, 0, 0) ridge;
     padding: 8px;
     margin-top: 20px;
 }
